--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font: 16px/1.5 Roboto, 'Hiragino Sans GB', helvetica, arial, sans-serif;
+  font: 16px/1.5 Roboto, 'Hiragino Sans GB', 'Microsoft Yahei', helvetica, arial, sans-serif;
   margin: 0;
   color: #333;
   background-color: #fff;
