use js include tag to include js

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -73,7 +73,7 @@
   </div>
 
   <% content_for :scripts do %>
-    <script src="/assets/admin/posts.js"></script>
+    <%= javascript_include_tag 'admin/posts' %>
   <% end -%>
 
 <% end %>
