--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -71,7 +71,7 @@ body {
   vertical-align: middle;
 }
 
-.post-form .form-group {
+.post-form .form-group, .course-form .form-group {
   border-bottom: 1px solid #eee;
   padding-bottom: 15px;
 }
