--- a/app/views/admin/slides/_form.html.erb
+++ b/app/views/admin/slides/_form.html.erb
@@ -3,7 +3,7 @@
   <label for="img_url" class="col-sm-2 control-label">图片URL</label>
   <div class="col-sm-10">
     <%= f.text_field :img_url, class: 'form-control' %>
-    <p class="text-muted"><small>建议把图片直接上传七牛，然后把图片外链贴在这里</small></p>
+    <p class="text-muted"><small>建议把图片直接上传七牛，然后把图片外链贴在这里。<a href="http://qiniu.com" target="_blank">七牛云存储</a></small></p>
   </div>
 </div>
 
