--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,12 +1,17 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.post-show-container {
-  padding: 16px 24px;
+
+.post-show {
+  padding-bottom: 16px;
 }
 
 .attachments {
   padding-bottom: 16px;
+
+  h4 {
+    margin-bottom: 8px;
+  }
 
   .filelist {
     margin-top: 8px;
