--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
         <nav class="left ml2">
           <ul>
             <li><a href="/">首页</a></li>
-            <li><a href="/courses">公开课</a></li>
-            <li><a href="/courses/featured.php">精品课</a></li>
+            <li><a class="<%= (controller_name == 'courses' && action_name.include?('free')) ? 'active' : '' %>" href="/courses/free">公开课</a></li>
+            <li><a class="<%= (controller_name == 'courses' && action_name == 'index') ? 'active' : '' %>" href="/courses">精品课</a></li>
             <li><a class="<%= (controller_name == 'welcome' && action_name == 'vip') ? 'active' : '' %>" href="/welcome/vip">一对一</a></li>
             <li><a class="<%= (controller_name == 'posts') ? 'active' : '' %>" href="/posts">免费资源</a></li>
             <li><a class="<%= (controller_name == 'welcome' && action_name == 'about') ? 'active' : '' %>" href="/welcome/about">关于我们</a></li>
