--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -24,29 +24,29 @@
   </div>
 </div>
 
-  <input type="hidden" name="teacher[avatar]" id="teacher_avatar" value="<%= @teacher.avatar %>">
+<%= f.hidden_field :avatar %>
 
-  <div class="form-group">
-    <label class="col-sm-2 control-label">头像</label>
-    <div class="col-sm-10">
-      <div class="padding-top: 7px;">
-        <div id="avatar_container">
-          <% unless @teacher.avatar.nil? %>
-            <img src="<%= @teacher.avatar %>?imageView2/1/w/120/h/120" height="60" width="60">
-            <a href="#">Delete</a>
-          <% end -%>
-        </div>
-        <div class="hidden">
-          <span class="filename"></span>
-          <%= image_tag 'loading.gif', width: 20, height: 20 %>
-        </div>
-        <div id="qiniu_container">
-          <button id="qiniu_upload" class="btn btn-default">选择文件</button>
-          <span class="text-muted"><small>只能上传一个头像，新上传的覆盖之前上传的</small></span>
-        </div>
+<div class="form-group">
+  <label class="col-sm-2 control-label">头像</label>
+  <div class="col-sm-10">
+    <div class="padding-top: 7px;">
+      <div id="avatar_container">
+        <% if @teacher.avatar %>
+        <img src="<%= @teacher.avatar %>?imageView2/1/w/120/h/120" height="60" width="60">
+        <a href="#">Delete</a>
+        <% end -%>
+      </div>
+      <div class="hidden">
+        <span class="filename"></span>
+        <%= image_tag 'loading.gif', width: 20, height: 20 %>
+      </div>
+      <div id="qiniu_container">
+        <button id="qiniu_upload" class="btn btn-default">选择文件</button>
+        <span class="text-muted"><small>只能上传一个头像，新上传的覆盖之前上传的</small></span>
       </div>
     </div>
   </div>
+</div>
 
 <div class="form-group">
   <div class="col-sm-10 col-sm-offset-2">
@@ -55,7 +55,7 @@
 </div>
 
 <% content_for :scripts do %>
-  <script src="/assets/admin/teachers.js"></script>
+<script src="/assets/admin/teachers.js"></script>
 <% end -%>
 
 <% end %>
