--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,12 +21,14 @@
               <small><%= image_tag 'download.png', width: 6, height: 14 %>&nbsp;文章内含附件</small>
             <% end -%>
           </div>
+          <% if p.tag_names.size > 0 %>
           <div class="tags">
             <%= image_tag "tag.png", height: 16, class: 'post-tag-icon' %>
             <% p.tag_names.each do |t| %>
               <a class="post-tag" href="<%= post_category_url(t.id) %>"><%= t.name %></a>
             <% end -%>
           </div>
+          <% end -%>
           <div class="body">
             <%= p.summary[0..200] %>
           </div>
