bug: teachers.js asset link

--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -54,7 +54,7 @@
 </div>
 
 <% content_for :scripts do %>
-<script src="/assets/admin/teachers.js"></script>
+  <%= javascript_include_tag 'admin/teachers' %>
 <% end -%>
 
 <% end %>
