no need for hash sign when setting slide bgColor

--- a/app/views/admin/slides/_form.html.erb
+++ b/app/views/admin/slides/_form.html.erb
@@ -23,7 +23,7 @@
   </label>
   <div class="col-sm-10">
     <%= f.text_field :bg_color, class: 'form-control' %>
-    <p class="text-muted"><small>选取合适的背景色，可以使轮播图视觉效果更好。建议在 PS 里选取图片两侧的颜色，把色值填在这里</small></p>
+    <p class="text-muted"><small>选取合适的背景色，可以使轮播图视觉效果更好。建议在 PS 里选取图片两侧的颜色，把色值填在这里，例如 FF9900 </small></p>
   </div>
 </div>
 
