bug: top badge display for posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,7 +33,7 @@
             <%= p.summary[0..200] %>
           </div>
 
-          <% if p.top %>
+          <% if p.top == 1 %>
             <%= image_tag "top.png", size: '60x60', class: 'top' %>
           <% end -%>
 
