--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -130,6 +130,18 @@ nav li a:hover, nav li a.active {
 .calendar-container {
   background-color: #f5f5f5;
   padding: 16px 0 40px 0;
+
+  ul {
+    list-style: none;
+    overflow: hidden;
+    padding: 0 0 20px 360px;
+
+    li {
+      float: left;
+      padding: 5px 15px;
+      color: white;
+    }
+  }
 }
 
 .course-item {
