add mark for required fields

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -105,3 +105,8 @@ table.files .delete-attachment {
   margin-left: 0;
   margin-right: 0;
 }
+
+.required {
+  color: red;
+  padding-left: 3px;
+}
