--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [:admin, @post], html: { class: 'form-horizontal post-form' } do |f| %>
   <input type="hidden" id="post-id" value="<%= @post.id %>">
   <div class="form-group">
-    <label for="title" class="col-sm-2 control-label">标题</label>
+    <label for="title" class="col-sm-2 control-label">标题<span class="required">*</span></label>
     <div class="col-sm-10">
       <%= f.text_field :title, class: 'form-control' %>
     </div>
@@ -9,7 +9,7 @@
 
   <div class="form-group">
     <label for="summary" class="col-sm-2 control-label">
-      摘要
+      摘要<span class="required">*</span>
     </label>
     <div class="col-sm-10">
       <%= f.text_area :summary, class: 'form-control' %>
@@ -18,7 +18,7 @@
   </div>
 
   <div class="form-group">
-    <label for="body" class="col-sm-2 control-label">正文</label>
+    <label for="body" class="col-sm-2 control-label">正文<span class="required">*</span></label>
     <div class="col-sm-10">
       <%= f.text_area :body, class: 'form-control', id: 'summernote' %>
     </div>
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label">标签</label>
+    <label class="col-sm-2 control-label">标签<span class="required">*</span></label>
     <div class="col-sm-10">
       <% @tags.each do |tag| %>
         <div class="checkbox">
