add partner links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,13 @@
 
     <footer class="py2 h6 center gray clearfix">
       <div class="max-width-4 mx-auto">
-          <p>友情链接：
-            <a class="mx1" href="#">腾讯</a>
-            <a class="mx1" href="#">尚有</a>
+          <p>合作伙伴：
+            <a class="mx1" href="http://www.mba.com/global">GMAC</a>
+            <a class="mx1" href="https://gmat770.ke.qq.com/">腾讯课堂</a>
+            <a class="mx1" href="http://e.youku.com/o/EOMTY2OA==">Youku学堂</a>
+            <a class="mx1" href="http://www.sharewithu.com/mall/space.php?type=course&id=820890">尚有商城</a>
+            <a class="mx1" href="http://edu.yy.com/agency/33137#tab0">YY教育</a>
+            <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
           <p>关注 GMAT770 的微信公众号</p>
           <p><%= image_tag 'qr.png', alt: '微信二维码', width: 111 %></p>
