--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
 
     <%= yield %>
 
+    <%= render 'welcome/barcode' %>
+
     <footer class="py2 h6 center gray clearfix">
       <div class="max-width-4 mx-auto">
           <p>合作伙伴：
