--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -619,3 +619,26 @@ nav li a:hover, nav li a.active {
 .fc-content {
   padding: 4px;
 }
+
+.pagination {
+  text-align: center;
+  padding: 20px 0;
+
+  > * {
+    display: inline-block;
+    border: 1px solid #dfdfdf;
+    border-radius: 2px;
+    background-color: white;
+    padding: 3px 10px;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
+  }
+
+  em, .disabled, .current {
+    font-style: normal;
+    color: #aaa;
+    border-color: #eee;
+  }
+}
