--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -129,19 +129,25 @@ nav li a:hover, nav li a.active {
 
 .calendar-container {
   background-color: #f5f5f5;
-  padding: 16px 0 40px 0;
+  padding-bottom: 32px;
 
-  ul {
-    list-style: none;
-    overflow: hidden;
-    padding: 0 0 20px 360px;
+  .meeting-categories-table {
+    border-collapse: collapse;
+    margin: 16px auto;
 
-    li {
-      float: left;
-      padding: 5px 15px;
+    th, td {
+      border: 1px solid #ddd;
+    }
+
+    th {
+      background: white;
+    }
+
+    td {
       color: white;
     }
   }
+
 }
 
 .course-item {
