--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,24 +53,29 @@
 
 <div class="calendar-container clearfix">
   <h3 class="center" style="margin-bottom: 0;">课程预告</h3>
-  <ul>
-    <li style="background-color: #666"><label><input type="radio" name="calendar-category" value="-1" checked> 全部</label></li>
-    <% @meeting.categories.each_with_index do |category, index| %>
-      <li style="background-color: <%= @meeting.colors[index] %>"><label><input type="radio" name="calendar-category" value="<%= index %>"> <%= category %></label></li>
-    <% end -%>
-  </ul>
-  <% if false %>
-    <div class="container">
-      <%= month_calendar events: @meetings do |date, meetings| %>
-        <%= date.day %>
-        <% meetings.each do |meeting| %>
-          <div>
-            <%= meeting.name %>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-  <% end -%>
+  <table cellspacing="0" cellpadding="10" class="meeting-categories-table">
+    <thead>
+      <th>全部课程</th>
+      <th colspan="4">线上直播课</th>
+      <th>线下面授课</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="background-color: #666" rowspan="2"><label><input type="radio" name="calendar-category" value="-1" checked> 全部</label></td>
+        <td style="background-color: <%= @meeting.colors[0] %>"><label><input type="radio" name="calendar-category" value="0"> 数学Q51</label></td>
+        <td style="background-color: <%= @meeting.colors[2] %>"><label><input type="radio" name="calendar-category" value="2"> 逻辑小班</label></td>
+        <td style="background-color: <%= @meeting.colors[4] %>"><label><input type="radio" name="calendar-category" value="4"> 语法小班</label></td>
+        <td rowspan="2" style="background-color: <%= @meeting.colors[6] %>"><label><input type="radio" name="calendar-category" value="6"> 免费私塾公开课</label></td>
+        <td rowspan="2" style="background-color: <%= @meeting.colors[7] %>"><label><input type="radio" name="calendar-category" value="7"> 线下面授班</label></td>
+      </tr>
+      <tr>
+        <td style="background-color: <%= @meeting.colors[1] %>"><label><input type="radio" name="calendar-category" value="1"> 数学训练营</label></td>
+        <td style="background-color: <%= @meeting.colors[3] %>"><label><input type="radio" name="calendar-category" value="3"> 逻辑训练营</label></td>
+        <td style="background-color: <%= @meeting.colors[5] %>"><label><input type="radio" name="calendar-category" value="5"> 语法训练营</label></td>
+      </tr>
+    </tbody>
+  </table>
+
   <div class="container">
     <div id="calendar"></div>
   </div>
