--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -110,3 +110,10 @@ table.files .delete-attachment {
   color: red;
   padding-left: 3px;
 }
+
+.meeting-form {
+  td {
+    padding-bottom: 16px;
+    padding-right: 8px;
+  }
+}
