--- a/app/views/admin/meetings/_form.html.erb
+++ b/app/views/admin/meetings/_form.html.erb
@@ -1,4 +1,7 @@
 <%= form_for [:admin, @meeting], html: { class: 'form-horizontal post-form' } do |f| %>
+
+<%= f.hidden_field :id %>
+
 <div class="form-group">
   <label for="name" class="col-sm-2 control-label">课程名<span class="required">*</span></label>
   <div class="col-sm-10">
@@ -17,16 +20,31 @@
 </div>
 
 <div class="form-group">
-  <label for="start_time" class="col-sm-2 control-label">
+  <label class="col-sm-2 control-label">
     上课时间<span class="required">*</span>
   </label>
-  <div class="col-sm-4">
-    <%= f.text_field :start_time, class: 'form-control datetime' %>
-    <div class="text-muted"><small>时间输入支持上下方向键和 Tab 键</small></div>
+  <div class="col-sm-10">
+    <p class="text-muted"><small>课程起止时间至少要填写一组</small></p>
+    <table class="meeting-form">
+      <tbody>
+        <%= f.fields_for :meeting_blocks do |builder| %>
+          <tr>
+            <td>
+              <%= builder.text_field :start_time, class: 'form-control datetime' %>
+            </td>
+            <td>
+              <%= builder.text_field :end_time, class: 'form-control datetime' %>
+            </td>
+            <td>
+              <%= builder.check_box :_destroy, class: 'delete-meeting-block' %> 删除
+            </td>
+          </tr>
+        <% end -%>
+      </tbody>
+    </table>
+    <a href="#" class="add-meeting-block">+ 添加时间段</a>
   </div>
-  <div class="col-sm-4">
-    <%= f.text_field :end_time, class: 'form-control datetime' %>
-  </div>
+
 </div>
 
 <div class="form-group">
