change qrcode image and add a footer link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,12 +42,13 @@
             <a class="mx1" href="http://www.mba.com/global">GMAC</a>
             <a class="mx1" href="https://gmat770.ke.qq.com/">腾讯课堂</a>
             <a class="mx1" href="http://e.youku.com/o/EOMTY2OA==">Youku学堂</a>
-            <a class="mx1" href="http://www.sharewithu.com/mall/space.php?type=course&id=820890">尚有商城</a>
+            <a class="mx1" href="http://www.iqiyi.com/u/2403845214">爱奇艺</a>
+            <a class="mx1" href="http://www.sharewithu.com/mall/space.php?type=course&id=820890">尚友商城</a>
             <a class="mx1" href="http://edu.yy.com/agency/33137#tab0">YY教育</a>
             <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
           <p>关注 GMAT770 的微信公众号</p>
-          <p><%= image_tag 'qr.png', alt: '微信二维码', width: 111 %></p>
+          <p><%= image_tag 'http://7xtg0z.com2.z0.glb.clouddn.com/770%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg', alt: '微信二维码', width: 100 %></p>
           <p>&copy; 2016 北京科技有限公司 ICP备29229923号</p>
       </div>
     </footer>
