update homepage pictures

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,31 +21,28 @@
 
       <div class="col col-4 p2">
         <div class="left mr2">
-          <img src="http://7xtg0z.com2.z0.glb.clouddn.com/p1.png" width="180" height="120">
+          <img src="http://7xtg0z.com2.z0.glb.clouddn.com/1.png" width="180" height="120">
         </div>
         <h4>实力 + 经验</h4>
         <p>
           团队平均770分以上，并均有超过2年的授课经验，独家教材
         </p>
-        <p><a href="http://edu.yy.com"><strong>查看更多&nbsp;»</strong></a></p>
       </div><div class="col col-4 p2">
       <div class="left mr2">
-        <img src="http://7xtg0z.com2.z0.glb.clouddn.com/p2.png" width="180" height="120">
+        <img src="http://7xtg0z.com2.z0.glb.clouddn.com/2.png" width="180" height="120">
       </div>
       <h4>定制 + 灵活</h4>
       <p>
         根据个人特点拟定授课方案，因材施教；一对一授课时间安排灵活
       </p>
-      <p><a href="bing.com"><strong>查看更多&nbsp;»</strong></a></p>
     </div><div class="col col-4 p2">
     <div class="left mr2">
-      <img src="http://7xtg0z.com2.z0.glb.clouddn.com/p3.png" width="180" height="120">
+      <img src="http://7xtg0z.com2.z0.glb.clouddn.com/3.png" width="180" height="120">
     </div>
     <h4>专注 + 陪伴</h4>
     <p>
       无需等待机经发布，临考前随时答疑解惑，有问必答，一路陪你达到目标分
     </p>
-    <p><a href="qq.com"><strong>查看更多&nbsp;»</strong></a></p>
   </div>
 </div>
 </div>
