set image width on about page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -4,7 +4,7 @@
       <div class="card clearfix">
         <div class="title">
         <h1><%= @about.title %></h1>
-          <%= image_tag @about.img, size: '384x432' %>
+          <%= image_tag @about.img, width: 384 %>
         </div>
         <div class="letter">
           <%= raw @about.body %>
