update ICP number

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
             <a class="mx1" href="http://edu.yy.com/agency/33137#tab0">YY教育</a>
             <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
-          <p>&copy; 2016 北京科技有限公司 ICP备29229923号</p>
+          <p>&copy; 2016 北京思晨教育科技有限公司 京ICP备16060483号-1</p>
       </div>
     </footer>
 
