--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="GMAT"/>
-    <meta name="description" content=""/>
+    <meta name="description" content="GMAT,英语,考试,MBA,培训"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GMAT770 - 助力你考G高分</title>
     <%= csrf_meta_tags %>
 
