fix a style issue

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,7 +7,7 @@
   <div class="pt2 bg-snow" style="padding-bottom: 20px;">
     <div class="container-narrow bg-white card" style="margin-bottom: 20px;">
       <div class="clearfix">
-        <div class="left">
+        <div class="left" style="width:70%;">
           <h2 style="margin: 0 0 8px 0"><%= @course.title %></h2>
           <div>开课时间: <%= @course.start_time.to_formatted_s(:date_and_time) %></div>
         </div>
