add a category for meetings

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -62,13 +62,14 @@
         <td style="background-color: <%= @meeting.colors[0] %>"><label><input type="radio" name="calendar-category" value="0"> 数学Q51</label></td>
         <td style="background-color: <%= @meeting.colors[2] %>"><label><input type="radio" name="calendar-category" value="2"> 逻辑小班</label></td>
         <td style="background-color: <%= @meeting.colors[4] %>"><label><input type="radio" name="calendar-category" value="4"> 语法小班</label></td>
-        <td rowspan="2" style="background-color: <%= @meeting.colors[6] %>"><label><input type="radio" name="calendar-category" value="6"> 免费私塾公开课</label></td>
+        <td style="background-color: <%= @meeting.colors[6] %>"><label><input type="radio" name="calendar-category" value="8"> 限时免费</label></td>
         <td rowspan="2" style="background-color: <%= @meeting.colors[7] %>"><label><input type="radio" name="calendar-category" value="7"> 线下面授班</label></td>
       </tr>
       <tr>
         <td style="background-color: <%= @meeting.colors[1] %>"><label><input type="radio" name="calendar-category" value="1"> 数学训练营</label></td>
         <td style="background-color: <%= @meeting.colors[3] %>"><label><input type="radio" name="calendar-category" value="3"> 逻辑训练营</label></td>
         <td style="background-color: <%= @meeting.colors[5] %>"><label><input type="radio" name="calendar-category" value="5"> 语法训练营</label></td>
+        <td style="background-color: <%= @meeting.colors[6] %>"><label><input type="radio" name="calendar-category" value="6"> 免费私塾公开课</label></td>
       </tr>
     </tbody>
   </table>
