rough markup for questions/index page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,7 +5,9 @@
 }
 
 body {
-  font: 16px/1.5 Helvetica, 'Hiragino Sans GB', 'Microsoft Yahei', arial, sans-serif;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  line-height: 1.5;
   margin: 0;
   color: #333;
   background-color: #fff;
