--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <li><a class="<%= (controller_name == 'courses' && action_name.include?('free')) ? 'active' : '' %>" href="/courses/free">公开课</a></li>
             <li><a class="<%= (controller_name == 'courses' && action_name == 'index') ? 'active' : '' %>" href="/courses">精品课</a></li>
             <li><a class="<%= (controller_name == 'welcome' && action_name == 'vip') ? 'active' : '' %>" href="/welcome/vip">一对一</a></li>
-            <li><a class="<%= (controller_name == 'questions') ? 'active' : '' %>" href="/questions">练习</a></li>
+            <li><a class="<%= (controller_name == 'exercises') ? 'active' : '' %>" href="/exercises">练习</a></li>
             <li><a class="<%= (controller_name == 'posts') ? 'active' : '' %>" href="/posts">免费资源</a></li>
             <li><a class="<%= (controller_name == 'welcome' && action_name == 'about') ? 'active' : '' %>" href="/welcome/about">关于我们</a></li>
           </ul>
